--- a/Developer's-Personal-Blog.html
+++ b/Developer's-Personal-Blog.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="md:w-2/5 flex justify-center">
                     <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white shadow-xl">
-                        <img src="https://readdy.ai/api/search-image?query=professional%20headshot%20of%20a%20male%20software%20developer%2C%20Asian%2C%20wearing%20casual%20professional%20attire%2C%20friendly%20smile%2C%20clean%20background%2C%20high%20quality%20portrait%2C%20professional%20lighting&width=400&height=400&seq=dev-portrait&orientation=squarish" alt="Alex Chen" class="object-cover w-full h-full">
+                        <img src="images/profilePicture.jpg" alt="Mapalo Musonda" class="object-cover w-full h-full">
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                 <h3 class="text-lg font-semibold text-gray-800 mb-2">AI-Powered Language Translation to Boost Tourism</h3>
                 <p class="text-gray-600 text-sm mb-2">Research abstract accepted by ZICTA • 2025</p>
                 <p class="text-gray-600 text-sm mb-2">Explores the use of artificial intelligence in real-time language translation tools for improving visitor experience and promoting tourism growth in Zambia.</p>
-                <a href="/blog/ai-language-translation-abstract.pdf" target="_blank" class="text-blue-600 text-sm hover:underline">Read Abstract</a>
+                <a href="/images/blog.pdf" target="_blank" class="text-blue-600 text-sm hover:underline">Read Abstract</a>
             </div>
         </div>
     </div>
@@ -140,24 +140,19 @@
     <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-gray-800 mb-12 text-center">Certificates</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-            <!-- Certificate 1 -->
-            <div class="bg-white rounded-lg shadow-md p-6">
-                <h3 class="text-lg font-semibold text-gray-800 mb-2">MetaTrader 5 Algorithmic Trading</h3>
-                <p class="text-gray-600 text-sm mb-2">Completed on Coursera • Jan 2024</p>
-                <a href="/certificates/metatrader5-coursera.pdf" target="_blank" class="text-blue-600 text-sm hover:underline">View Certificate</a>
-            </div>
+
 
             <!-- Certificate 3 -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-2">Huawei Artificial Intelligence and Applications</h3>
                 <p class="text-gray-600 text-sm mb-2">Huawei Talent Online • 2025</p>
-                <a href="/certificates/huawei-ai-applications.pdf" target="_blank" class="text-blue-600 text-sm hover:underline">View Certificate</a>
+                <a href="/images/cerificate4.png" target="_blank" class="text-blue-600 text-sm hover:underline">View Certificate</a>
             </div>
             <!-- Certificate 4 -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-2">Kaggle: Intro to Deep Learning</h3>
                 <p class="text-gray-600 text-sm mb-2">Kaggle Courses • 2024</p>
-                <a href="/certificates/kaggle-deep-learning.pdf" target="_blank" class="text-blue-600 text-sm hover:underline">View Certificate</a>
+                <a href="/images/certificate1.png" target="_blank" class="text-blue-600 text-sm hover:underline">View Certificate</a>
             </div>
             <!-- Add more certificates as needed -->
         </div>
@@ -178,7 +173,7 @@
 <!-- Project 1 -->
 <div class="project-card bg-white rounded-lg shadow-md overflow-hidden w-80 flex flex-col transition-all duration-300">
     <div class="h-48 overflow-hidden">
-        <img src="https://images.unsplash.com/photo-1569025692246-936f6d1e8d0b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=60" alt="Trading Bot Interface" class="w-full h-full object-cover object-top">
+        <img src="/images/Chart.png" alt="Trading Bot Interface" class="w-full h-full object-cover object-top">
     </div>
     <div class="p-6 flex-1 flex flex-col">
         <h3 class="text-xl font-bold text-gray-800 mb-2">NNFX Trading Robot</h3>
@@ -195,33 +190,7 @@
             <a href="#" class="flex-1 text-center py-2 bg-primary text-white rounded-button font-medium hover:bg-blue-600 transition-colors duration-200 cursor-pointer !rounded-button">
                 View Strategy
             </a>
-            <a href="https://github.com/your-username/nnfx-trading-bot" target="_blank" class="flex items-center justify-center w-10 h-10 bg-gray-800 text-white rounded-button hover:bg-gray-700 transition-colors duration-200 cursor-pointer !rounded-button">
-                <i class="ri-github-fill ri-lg"></i>
-            </a>
-        </div>
-    </div>
-</div>
-
-<!-- Project 2 -->
-<div class="project-card bg-white rounded-lg shadow-md overflow-hidden w-80 flex flex-col transition-all duration-300">
-    <div class="h-48 overflow-hidden">
-        <img src="https://readdy.ai/api/search-image?query=mobile%20fitness%20app%20interface%2C%20health%20tracking%2C%20workout%20planner%2C%20modern%20UI%20design%2C%20professional%20design%2C%20clean%20professional%20lighting%2C%20high%20quality&width=400&height=240&seq=project2&orientation=landscape" alt="Fitness App" class="w-full h-full object-cover object-top">
-    </div>
-    <div class="p-6 flex-1 flex flex-col">
-        <h3 class="text-xl font-bold text-gray-800 mb-2">FitTrack Pro</h3>
-        <p class="text-gray-600 mb-4 flex-1">
-            A fitness tracking application with personalized workout plans, nutrition tracking, and progress analytics.
-        </p>
-        <div class="flex flex-wrap gap-2 mb-4">
-            <span class="text-xs font-medium px-2 py-1 bg-blue-100 text-blue-600 rounded-full">Flutter</span>
-            <span class="text-xs font-medium px-2 py-1 bg-green-100 text-green-600 rounded-full">Firebase</span>
-            <span class="text-xs font-medium px-2 py-1 bg-red-100 text-red-600 rounded-full">TensorFlow</span>
-        </div>
-        <div class="flex space-x-3">
-            <a href="#" class="flex-1 text-center py-2 bg-primary text-white rounded-button font-medium hover:bg-blue-600 transition-colors duration-200 cursor-pointer !rounded-button">
-                Live Demo
-            </a>
-            <a href="#" class="flex items-center justify-center w-10 h-10 bg-gray-800 text-white rounded-button hover:bg-gray-700 transition-colors duration-200 cursor-pointer !rounded-button">
+            <a href="https://github.com/Penza2024/NNFX-Trading-Robot" target="_blank" class="flex items-center justify-center w-10 h-10 bg-gray-800 text-white rounded-button hover:bg-gray-700 transition-colors duration-200 cursor-pointer !rounded-button">
                 <i class="ri-github-fill ri-lg"></i>
             </a>
         </div>
@@ -229,63 +198,6 @@
 </div>
 
 
-                    <!-- Project 3 -->
-                    <div class="project-card bg-white rounded-lg shadow-md overflow-hidden w-80 flex flex-col transition-all duration-300">
-                        <div class="h-48 overflow-hidden">
-                            <img src="https://readdy.ai/api/search-image?query=AI%20chatbot%20interface%2C%20conversational%20UI%2C%20natural%20language%20processing%2C%20modern%20design%2C%20professional%20design%2C%20clean%20professional%20lighting%2C%20high%20quality&width=400&height=240&seq=project3&orientation=landscape" alt="AI Chatbot" class="w-full h-full object-cover object-top">
-                        </div>
-                        <div class="p-6 flex-1 flex flex-col">
-                            <h3 class="text-xl font-bold text-gray-800 mb-2">ConvoAI Assistant</h3>
-                            <p class="text-gray-600 mb-4 flex-1">
-                                An intelligent chatbot platform with natural language processing capabilities for customer support automation.
-                            </p>
-                            <div class="flex flex-wrap gap-2 mb-4">
-                                <span class="text-xs font-medium px-2 py-1 bg-blue-100 text-blue-600 rounded-full">Python</span>
-                                <span class="text-xs font-medium px-2 py-1 bg-green-100 text-green-600 rounded-full">FastAPI</span>
-                                <span class="text-xs font-medium px-2 py-1 bg-purple-100 text-purple-600 rounded-full">Vue.js</span>
-                                <span class="text-xs font-medium px-2 py-1 bg-yellow-100 text-yellow-600 rounded-full">NLP</span>
-                            </div>
-                            <div class="flex space-x-3">
-                                <a href="#" class="flex-1 text-center py-2 bg-primary text-white rounded-button font-medium hover:bg-blue-600 transition-colors duration-200 cursor-pointer !rounded-button">
-                                    Live Demo
-                                </a>
-                                <a href="#" class="flex items-center justify-center w-10 h-10 bg-gray-800 text-white rounded-button hover:bg-gray-700 transition-colors duration-200 cursor-pointer !rounded-button">
-                                    <i class="ri-github-fill ri-lg"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Project 4 -->
-                    <div class="project-card bg-white rounded-lg shadow-md overflow-hidden w-80 flex flex-col transition-all duration-300">
-                        <div class="h-48 overflow-hidden">
-                            <img src="https://readdy.ai/api/search-image?query=code%20editor%20interface%2C%20developer%20tools%2C%20programming%20environment%2C%20syntax%20highlighting%2C%20professional%20design%2C%20clean%20professional%20lighting%2C%20high%20quality&width=400&height=240&seq=project4&orientation=landscape" alt="Code Editor" class="w-full h-full object-cover object-top">
-                        </div>
-                        <div class="p-6 flex-1 flex flex-col">
-                            <h3 class="text-xl font-bold text-gray-800 mb-2">CodeCollab Editor</h3>
-                            <p class="text-gray-600 mb-4 flex-1">
-                                A collaborative code editor with real-time synchronization, syntax highlighting, and integrated version control.
-                            </p>
-                            <div class="flex flex-wrap gap-2 mb-4">
-                                <span class="text-xs font-medium px-2 py-1 bg-blue-100 text-blue-600 rounded-full">TypeScript</span>
-                                <span class="text-xs font-medium px-2 py-1 bg-green-100 text-green-600 rounded-full">Socket.io</span>
-                                <span class="text-xs font-medium px-2 py-1 bg-purple-100 text-purple-600 rounded-full">Express</span>
-                                <span class="text-xs font-medium px-2 py-1 bg-yellow-100 text-yellow-600 rounded-full">Monaco</span>
-                            </div>
-                            <div class="flex space-x-3">
-                                <a href="#" class="flex-1 text-center py-2 bg-primary text-white rounded-button font-medium hover:bg-blue-600 transition-colors duration-200 cursor-pointer !rounded-button">
-                                    Live Demo
-                                </a>
-                                <a href="#" class="flex items-center justify-center w-10 h-10 bg-gray-800 text-white rounded-button hover:bg-gray-700 transition-colors duration-200 cursor-pointer !rounded-button">
-                                    <i class="ri-github-fill ri-lg"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 <!-- Skills & Technologies Section -->
 <section id="skills" class="py-20 bg-white">
     <div class="container mx-auto px-4">
